--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -8,7 +8,7 @@
       <li>
         <form action="/i18n/setlang/" method="post">{% csrf_token %}
           <input name="next" type="hidden" value="/" />
-          <select name="language" onchange="this.form.submit()">
+          <select id="language" name="language" onchange="this.form.submit()">
             <option>{% trans "Language" %}</option>
             {% for lang in LANGUAGES %}
               <option value="{{ lang.0 }}">{{ lang.1 }}</option>
