--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -41,14 +41,14 @@
         
     <div class="topbar">
       <div id="version">
-	      v0.1 alpha
+	      v0.1 beta
 	    </div>
 	    <div id="userbar">
 	      {% include "menu.html" %}
 	    </div>
 	  </div>
 
-      <div id="jsnotify">
+      <div id="jsnotify" class="hidden">
         <div id="basic-template">
           <!-- <a class="ui-notify-cross ui-notify-close" href="#">x</a> -->
           <div style="float:left;margin:0 10px 0 0"><img src="{{ STATIC_URL }}/assets/icons/#{icon}" alt="warning" /></div>
