--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -37,7 +37,7 @@
             </thead>
             <tbody id="debate-body">
                 <tr id="debate-row-1">
-                    <td id="debate-hcriteria" class="criteria-title"><input id="debate1-criteria1" value="Test criteria"></td>
+                    <div class="ttitle"><td id="debate-hcriteria" class="criteria-title"><input id="debate1-criteria1" value="Test criteria"></td></div>
                     <td id="debate-1-example">
                         <ul id="sortable1" class='connectedSortable'>
 	                        <li class="note"><textarea>Can be dropped..</textarea></li>
@@ -55,6 +55,7 @@
         <br />
         
         <a href="javascript:createNote()" id="new-note" class="btn small primary">Add new note</a>
+        <a href="javascript:changeColor()" class="btn small primary">Change color</a>
         <div id="dispatcher">
             <ul id="sortable-dispatcher" class="connectedSortable"></ul>
         </div>
