Styled debate table

--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -31,13 +31,17 @@
         <table id="debate" cellspacing="0">
             <thead>
                 <tr id="debate-headers">
-                    <th id="debate-vcriteria" class="criteria-title"></th>
-                    <th id="debate-vcriteria"><input id="debate1-criteria2" value="Column title"></td></th>
+                    <th id="debate-vcriteria" class="corner-criteria"></th>
+                    <th id="debate-vcriteria"><input id="debate1-criteria2" class="small" type="text" value="Column title"></td></th>
                 </tr>
             </thead>
             <tbody id="debate-body">
                 <tr id="debate-row-1">
-                    <div class="ttitle"><td id="debate-hcriteria" class="criteria-title"><input id="debate1-criteria1" value="Test criteria"></td></div>
+                    <td id="debate-hcriteria" class="criteria-title">
+                        <div id="debate-ttitle">
+                            <input class="small" id="debate1-criteria1" type="text" value="Test criteria">
+                        </div>
+                    </td>
                     <td id="debate-1-example">
                         <ul id="sortable1" class='connectedSortable'>
 	                        <li class="note"><textarea>Can be dropped..</textarea></li>
