--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -22,25 +22,32 @@
   <div class="grid_16">
   
     <div id="loginblock">
-	    <form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8">{% csrf_token %}
+	    <form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8" class="form-stacked">{% csrf_token %}
 	      <fieldset>
 		      <legend>{% trans "User login" %}</legend>
-		      <label for="id_username">{% trans "Username" %}</label>
-		      <p>{{ form.username }}
-			    {% if form.username.errors %}
-				    <span class="quiet red">{{ form.username.html_error_list }}</span>
-			    {% endif %}
-		      </p><br />
+		      
+		      <div class="clearfix">
+		          <label for="id_username">{% trans "Username" %}</label>
+		          <div class="input">
+		              {{ form.username }}
+			          {% if form.username.errors %}
+				          <span class="help-inline">{{ form.username.html_error_list }}</span>
+			          {% endif %}
+			      </div>
+			  </div>
 		
-		    <label for="id_password">{% trans "Password" %}</label>
-		    <p>{{ form.password }}
-			  {% if form.password.errors %}
-				  <span class="quiet red">{{ form.password.html_error_list }}</span>
-			  {% endif %}
-		    </p>
-		    {% if form.non_field_errors %}
-			    <ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
-		    {% endif %}
+		      <div class="clearfix">
+		          <label for="id_password">{% trans "Password" %}</label>
+		          <div class="input">
+		              {{ form.password }}
+		              {% if form.password.errors %}
+				          <span class="help-inline">{{ form.password.html_error_list }}</span>
+			          {% endif %}
+		          </div>
+		      </div>
+		      {% if form.non_field_errors %}
+			      <ul class="help-inline">{{ form.non_field_errors.as_ul }}</ul>
+		      {% endif %}
 	      </fieldset><br />
 	
 	    <p><input type="submit" value="{% trans 'Login' %}" />
