--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -13,15 +13,13 @@
             <div id="contenttitles">
                 {% trans "Create a new debate" %}
             </div>
-            
-
 
             <div id="debate">
 
             <form enctype="" action="" method="post">{% csrf_token %}
                 
-                <a href="javascript:removeTableColumn()" id="del-column-btn" class="btn danger small">Remove column</a>
-                <a href="javascript:addTableColumn()" id="new-column-btn" class="btn primary small">Add column</a>
+                <a href="javascript:removeTableColumn()" id="del-column-btn" class="btn danger small">{% trans "Remove column" %}</a>
+                <a href="javascript:addTableColumn()" id="new-column-btn" class="btn primary small">{% trans "Add column" %}</a>
                 
                 <table id="debate1" cellspacing="0">
                     <thead>
@@ -45,29 +43,24 @@
                     </tbody>
                 </table>
                 
-                <a href="javascript:removeTableRow()" id="del-row-btn" class="btn danger small">Remove row</a>         
-                <a href="javascript:addTableRow()" id="new-row-btn" class="btn primary small">Add row</a>
+                <a href="javascript:removeTableRow()" id="del-row-btn" class="btn danger small">{% trans "Remove row" %}</a>         
+                <a href="javascript:addTableRow()" id="new-row-btn" class="btn primary small">{% trans "Add row" %}</a>
 
                 <br />
                 
-                <a href="javascript:createNote()" id="new-note" class="btn primary small">Add new note</a>
+                <a href="javascript:createNote()" id="new-note" class="btn primary small">{% trans "Add new note" %}</a>
+                <a href="javascript:createPhase()" id="create-phase" class="btn primary small">{% trans "Add phase"%}</a>
                 <div id="sortable-dispatcher"></div>
                 
                 <hr />
+                <h1>{% trans "Other debate data" %}</h1><br/><br/>
                 
                 {{ form.non_field_errors }}
-                
-                <div class="clearfix"> 
+
+               <div class="clearfix"> 
                     <label for="prependedInput">{{ form.title.label }}</label> 
                     <div class="input"> 
                         {{ form.title }} 
-                    </div> 
-                </div>
-                
-                <div class="clearfix"> 
-                    <label for="prependedInput">{{ form.description.label }}</label> 
-                    <div class="input"> 
-                        {{ form.description }} 
                     </div> 
                 </div>
                 
@@ -78,28 +71,33 @@
                     </div> 
                 </div>
                 
-                <hr />
-                <p class="buttons">
-                    <img src="{{ STATIC_URL }}/assets/icons/add24.png" title="{% trans 'Add new phase' %}" alt="{% trans 'Add new phase' %}" />
-                    <a href="../../" class="addphase">{% trans "Phase" %}</a>
-                    <input class="btn primary" type="submit" value="{% trans 'Save' %}" />
+                <div class="clearfix"> 
+                    <label for="prependedInput">{{ form.description.label }}</label> 
+                    <div class="input"> 
+                        {{ form.description }} 
+                    </div> 
+                </div>
                 
-                    {{ phaseform.management_form }}
-                    
-                    <div class="clearfix"> 
-                        <label for="prependedInput">{{ phaseform.start_date.label }}</label> 
-                        <div class="input"> 
-                            {{ phaseform.start_date }} 
-                        </div> 
-                    </div>
-                    
-                    <div class="clearfix"> 
-                        <label for="prependedInput">{{ phaseform.end_date.label }}</label> 
-                        <div class="input"> 
-                            {{ phaseform.end_date }} 
-                        </div> 
-                    </div>
-                </p>
+                {{ phaseform.management_form }}
+                
+                <div class="clearfix"> 
+                    <label for="prependedInput">{{ phaseform.start_date.label }}</label> 
+                    <div class="input"> 
+                        {{ phaseform.start_date }} 
+                    </div> 
+                </div>
+                
+                <div class="clearfix"> 
+                    <label for="prependedInput">{{ phaseform.end_date.label }}</label> 
+                    <div class="input"> 
+                        {{ phaseform.end_date }} 
+                    </div> 
+                </div>
+                
+                <hr />
+
+                <input class="btn primary" type="submit" value="{% trans 'Save' %}" />
+                <a href="../../" class="btn danger small">{% trans "Cancel" %}</a>
 
             </form>
                 
