Added AJAX for debate notes.

--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -36,8 +36,8 @@
                                 </div>
                             </td>
                             <td id="sortable-debate1" class="connectedSortable">
-	                            <div class="note"><textarea>Can be dropped..</textarea></div>
-                                <div class="note"><textarea>..on an empty list</textarea></div>
+	                            <div id="debate1-note1" class="note"><textarea>Can be dropped..</textarea></div>
+                                <div id="debate1-note2" class="note"><textarea>..on an empty list</textarea></div>
                             </td>
                         </tr>
                     </tbody>
@@ -96,7 +96,7 @@
                 
                 <hr />
 
-                <input class="btn primary" type="submit" value="{% trans 'Save' %}" />
+                <!-- <input class="btn primary" type="submit" value="{% trans 'Save' %}" /> -->
                 <a href="../../" class="btn danger small">{% trans "Cancel" %}</a>
 
             </form>
