--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -17,11 +17,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
-		<script src="{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
-		<script src="{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script>
+		<script src="http://www.google.com/jsapi?key=ABQIAAAATqrYeRgzMa92HeAJ337iJhRWlTAuTwYT79cviOHriikXgTyaXRSApoqdJPf4dwJKYRnFn_s4iABNkg" type="text/javascript"></script>
+		<script type="text/javascript"> 
+			google.load("jquery", "1.6.3", {uncompressed:false});
+			google.load("jqueryui", "1.8.16", {uncompressed:false});
+		</script> 
+		<!-- <script src="{{ STATIC_URL }}/js/jquery.js" type="text/javascript"></script>
+		<script src="{{ STATIC_URL }}/js/jquery-ui.js" type="text/javascript"></script> -->
 		<script src="{{ STATIC_URL }}/js/dropdown.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/site.js" type="text/javascript"></script>
     	<script src="{{ STATIC_URL }}/js/jquery.notify.min.js" type="text/javascript"></script>
+    	<script src="{{ STATIC_URL }}/js/jquery.forms.js" type="text/javascript"></script>
 		
 		{% comment %}
 		  This will load the wysiwyg system for all pages that iherit from base.html
